--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,7 @@ publish/
 # NuGet Packages Directory
 ## TODO: If you have NuGet Package Restore enabled, uncomment the next line
 packages/
+NancyApplication1/packages
 
 # Windows Azure Build Output
 csx
