--- a/NancyApplication1/NancyApplication1/Web.config
+++ b/NancyApplication1/NancyApplication1/Web.config
@@ -8,7 +8,7 @@
     <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
       <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
     </sectionGroup>
-  </configSections>
+  <sectionGroup name="bundleTransformer"><section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" /><section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" /></sectionGroup><section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core" /></configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <buildProviders>
@@ -18,22 +18,48 @@
     </compilation>
     <httpHandlers>
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-    </httpHandlers>
+    <add path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler, dotless.Core" /></httpHandlers>
   </system.web>
   <system.webServer>
+    <staticContent>
+      <mimeMap fileExtension=".less" mimeType="text/css" />
+    </staticContent>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-    </handlers>
+    <add name="dotless" path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler,dotless.Core" resourceType="File" preCondition="" /></handlers>
   </system.webServer>
   <appSettings>
     <add key="webPages:Enabled" value="false" />
   </appSettings>
   <system.web.webPages.razor>
-    <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
+    <pages pageBaseType="TT.Web.Core.TTRazorViewBase">
       <namespaces>
         <add namespace="Nancy.ViewEngines.Razor" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
+  <location path="Scripts">
+    <system.webServer>
+      <handlers>
+        <remove name="Nancy" />
+      </handlers>
+    </system.webServer>
+  </location>
+  <location path="Content">
+    <system.webServer>
+      <handlers>
+        <remove name="Nancy" />
+      </handlers>
+    </system.webServer>
+  </location>
+<bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd"><core><css><minifiers><add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /></minifiers><translators><add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" /><add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" /></translators></css><js><minifiers><add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /></minifiers><translators><add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" /></translators></js></core></bundleTransformer><dotless minifyCss="false" cache="true" web="false" />
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.7.11.0" newVersion="1.7.11.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
