--- a/NancyApplication1/NancyApplication1/packages.config
+++ b/NancyApplication1/NancyApplication1/packages.config
@@ -1,7 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BundleTransformer.Core" version="1.7.11-Beta1" targetFramework="net40" />
+  <package id="BundleTransformer.Less" version="1.7.9-Beta1" targetFramework="net40" />
+  <package id="dotless" version="1.3.1.0" targetFramework="net40" />
+  <package id="jQuery" version="1.9.1" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0-Beta1" targetFramework="net40" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Nancy" version="0.17.1" targetFramework="net40" />
   <package id="Nancy.Hosting.Aspnet" version="0.17.1" targetFramework="net40" />
   <package id="Nancy.Viewengines.Razor" version="0.17.1" targetFramework="net40" />
   <package id="System.Web.Razor.Unofficial" version="2.0.2" targetFramework="net40" />
+  <package id="Twitter.Bootstrap.Less" version="2.3.2.1" targetFramework="net40" />
+  <package id="WebGrease" version="1.1.0" targetFramework="net40" />
 </packages>
