--- a/NancyApplication1/packages/repositories.config
+++ b/NancyApplication1/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\NancyApplication1\packages.config" />
+  <repository path="..\TT.BizLogic\packages.config" />
+  <repository path="..\TT.Data\packages.config" />
 </repositories>
