added base url for blog

--- a/NancyApplication1/NancyApplication1/Web.config
+++ b/NancyApplication1/NancyApplication1/Web.config
@@ -48,6 +48,7 @@
   <appSettings>
     <add key="webPages:Enabled" value="false"/>
     <add key="MONGOLAB_URI" value="mongodb://admin:admin@ds027618.mongolab.com:27618/ttadmin2"/>
+    <add key="BlogEngineBaseUrl" value="http://localhost:45436/"/>
   </appSettings>
   <system.web.webPages.razor>
     <pages pageBaseType="TT.Web.Core.TTRazorViewBase">
