added espn news and templating, and also moment js for easy date formatting

--- a/NancyApplication1/NancyApplication1/TT.Web.csproj
+++ b/NancyApplication1/NancyApplication1/TT.Web.csproj
@@ -149,6 +149,8 @@
     <Content Include="Scripts\jquery-1.9.1.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
     <Content Include="Scripts\less.min.js" />
+    <Content Include="Scripts\moment.js" />
+    <Content Include="Scripts\moment.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -165,6 +167,7 @@
     <Content Include="Scripts\jquery-1.9.1.min.map" />
     <Content Include="Views\Shared\_layout.cshtml" />
     <Content Include="Views\Shared\_currentPost.cshtml" />
+    <Content Include="Views\Shared\_headlines.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
