--- a/NancyApplication1/NancyApplication1/packages.config
+++ b/NancyApplication1/NancyApplication1/packages.config
@@ -6,6 +6,7 @@
   <package id="jQuery" version="1.9.1" targetFramework="net40" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0-Beta1" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="Moment.js" version="2.0.0" targetFramework="net45" />
   <package id="Nancy" version="0.17.1" targetFramework="net40" />
   <package id="Nancy.Hosting.Aspnet" version="0.17.1" targetFramework="net40" />
   <package id="Nancy.Viewengines.Razor" version="0.17.1" targetFramework="net40" />
