--- a/NancyApplication1/packages/repositories.config
+++ b/NancyApplication1/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\..\..\Users\joe\Documents\GitHub\Nancy.LightningCache\Nancy.LightningCache\packages.config" />
   <repository path="..\NancyApplication1\packages.config" />
   <repository path="..\TT.BizLogic\packages.config" />
   <repository path="..\TT.Data\packages.config" />
