--- a/NancyApplication1/NancyApplication1/Web.config
+++ b/NancyApplication1/NancyApplication1/Web.config
@@ -14,16 +14,8 @@
     </sectionGroup>
     <section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core" />
   </configSections>
-  <!--
-     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
-
-     The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
-        <httpRuntime targetFramework="4.5" />
-      </system.Web>
-  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5">
+    <compilation debug="true" targetFramework="4.0">
       <buildProviders>
         <add extension=".cshtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyCSharpRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
         <add extension=".vbhtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyVisualBasicRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
@@ -49,6 +41,8 @@
     <add key="webPages:Enabled" value="false" />
     <add key="MONGOLAB_URI" value="mongodb://admin:admin@ds027618.mongolab.com:27618/ttadmin2" />
     <add key="BlogEngineBaseUrl" value="localhost:45436" />
+    <add key="EspnApiKey" value="rxhm9zwh5yad3psw7nj8b33a" />
+    <add key="EspnHeadlinesUrl" value="http://api.espn.com/v1/sports/tennis/news/headlines" />
   </appSettings>
   <system.web.webPages.razor>
     <pages pageBaseType="TT.Web.Core.TTRazorViewBase">
@@ -98,6 +92,10 @@
       <dependentAssembly>
         <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.7.11.0" newVersion="1.7.11.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
