--- a/NancyApplication1/NancyApplication1/packages.config
+++ b/NancyApplication1/NancyApplication1/packages.config
@@ -5,6 +5,9 @@
   <package id="dotless" version="1.3.1.0" targetFramework="net40" />
   <package id="jQuery" version="1.9.1" targetFramework="net40" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0-Beta1" targetFramework="net40" />
+  <package id="Microsoft.Bcl" version="1.0.19" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.6" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.1.10" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Moment.js" version="2.0.0" targetFramework="net45" />
   <package id="Nancy" version="0.17.1" targetFramework="net40" />
