carousel pictures added

--- a/NancyApplication1/TT.BizLogic/TT.BizLogic.csproj
+++ b/NancyApplication1/TT.BizLogic/TT.BizLogic.csproj
@@ -41,6 +41,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Services.Client" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,6 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BingSearch.cs" />
+    <Compile Include="BingSearchContainer.cs" />
     <Compile Include="Dto\VideoDto.cs" />
     <Compile Include="ValueLookUp.cs" />
     <Compile Include="Dto\ValueLookUpDto.cs" />
