--- a/NancyApplication1/NancyApplication1/Web.config
+++ b/NancyApplication1/NancyApplication1/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -6,62 +6,71 @@
 <configuration>
   <configSections>
     <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
-      <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
+      <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false"/>
     </sectionGroup>
     <sectionGroup name="bundleTransformer">
-      <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
-      <section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" />
+      <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core"/>
+      <section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less"/>
     </sectionGroup>
-    <section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core" />
+    <section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core"/>
   </configSections>
+  <!--
+    For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.0">
+    <compilation debug="true" targetFramework="4.5">
       <buildProviders>
-        <add extension=".cshtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyCSharpRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
-        <add extension=".vbhtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyVisualBasicRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
+        <add extension=".cshtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyCSharpRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders"/>
+        <add extension=".vbhtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyVisualBasicRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders"/>
       </buildProviders>
     </compilation>
     <httpHandlers>
-      <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-      <add path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler, dotless.Core" />
+      <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
+      <add path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler, dotless.Core"/>
     </httpHandlers>
-    <pages controlRenderingCompatibilityVersion="4.0" />
+    <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
   <system.webServer>
     <staticContent>
-      <mimeMap fileExtension=".less" mimeType="text/css" />
+      <mimeMap fileExtension=".less" mimeType="text/css"/>
     </staticContent>
-    <validation validateIntegratedModeConfiguration="false" />
+    <validation validateIntegratedModeConfiguration="false"/>
     <handlers>
-      <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-      <add name="dotless" path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler,dotless.Core" resourceType="File" preCondition="" />
+      <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
+      <add name="dotless" path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler,dotless.Core" resourceType="File" preCondition=""/>
     </handlers>
   </system.webServer>
   <appSettings>
-    <add key="webPages:Enabled" value="false" />
-    <add key="MONGOLAB_URI" value="mongodb://admin:admin@ds027618.mongolab.com:27618/ttadmin2" />
-    <add key="BlogEngineBaseUrl" value="localhost:45436" />
-    <add key="EspnApiKey" value="rxhm9zwh5yad3psw7nj8b33a" />
-    <add key="EspnHeadlinesUrl" value="http://api.espn.com/v1/sports/tennis/news/headlines" />
+    <add key="webPages:Enabled" value="false"/>
+    <add key="MONGOLAB_URI" value="mongodb://admin:admin@ds027618.mongolab.com:27618/ttadmin2"/>
+    <add key="BlogEngineBaseUrl" value="localhost:45436"/>
+    <add key="EspnApiKey" value="rxhm9zwh5yad3psw7nj8b33a"/>
+    <add key="EspnHeadlinesUrl" value="http://api.espn.com/v1/sports/tennis/news/headlines"/>
   </appSettings>
   <system.web.webPages.razor>
-    <pages pageBaseType="TT.Web.Core.TTRazorViewBase">
+    <pages pageBaseType="TT.Web.Core.TTRazorViewBase`1[[System.Object]]">
       <namespaces>
-        <add namespace="Nancy.ViewEngines.Razor" />
+        <add namespace="Nancy.ViewEngines.Razor"/>
+        <add namespace="TT.BizLogic"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
   <location path="Scripts">
     <system.webServer>
       <handlers>
-        <remove name="Nancy" />
+        <remove name="Nancy"/>
       </handlers>
     </system.webServer>
   </location>
   <location path="Content">
     <system.webServer>
       <handlers>
-        <remove name="Nancy" />
+        <remove name="Nancy"/>
       </handlers>
     </system.webServer>
   </location>
@@ -69,33 +78,33 @@
     <core>
       <css>
         <minifiers>
-          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core"/>
         </minifiers>
         <translators>
-          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-          <add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" />
+          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false"/>
+          <add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less"/>
         </translators>
       </css>
       <js>
         <minifiers>
-          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core"/>
         </minifiers>
         <translators>
-          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false"/>
         </translators>
       </js>
     </core>
   </bundleTransformer>
-  <dotless minifyCss="false" cache="true" web="false" />
+  <dotless minifyCss="false" cache="true" web="false"/>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.7.11.0" newVersion="1.7.11.0" />
+        <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.7.11.0" newVersion="1.7.11.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
