--- a/NancyApplication1/TT.BizLogic/TT.BizLogic.csproj
+++ b/NancyApplication1/TT.BizLogic/TT.BizLogic.csproj
@@ -62,6 +62,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\System.Spatial.5.2.0\lib\net40\System.Spatial.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -71,7 +72,9 @@
   <ItemGroup>
     <Compile Include="BingSearch.cs" />
     <Compile Include="BingSearchContainer.cs" />
+    <Compile Include="Dto\StrokeDto.cs" />
     <Compile Include="Dto\VideoDto.cs" />
+    <Compile Include="Strokes.cs" />
     <Compile Include="UserVideos.cs" />
     <Compile Include="ValueLookUp.cs" />
     <Compile Include="Dto\ValueLookUpDto.cs" />
